--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -10,6 +10,7 @@
     "url": "https://hg-od01.corp.pingidentity.com/r/ui-library"
   },
   "dependencies": {
+    "classnames": "1.2.1",
     "react": "0.13.3",
     "react-tools": "0.13.3"
   },
@@ -19,6 +20,7 @@
     "babel-eslint": "4.1.1",
     "babel-jest": "5.3.0",
     "babel-loader": "5.3.2",
+    "clean-webpack-plugin": "0.1.3",
     "css-loader": "0.16.0",
     "eslint": "1.3.1",
     "eslint-loader": "1.0.0",
