--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -29,6 +29,8 @@
     "file-loader": "0.8.4",
     "jest": "0.1.40",
     "jest-cli": "0.4.19",
+    "moment": "2.9.0",
+    "moment-range": "1.0.5",
     "react-hot-loader": "1.3.0",
     "style-loader": "0.12.3",
     "url-loader": "0.5.6",
