--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -17,14 +17,14 @@
   "devDependencies": {
     "babel": "5.8.23",
     "babel-core": "5.8.22",
-    "babel-eslint": "4.1.1",
+    "babel-eslint": "4.1.3",
     "babel-jest": "5.3.0",
     "babel-loader": "5.3.2",
     "clean-webpack-plugin": "0.1.3",
     "css-loader": "0.16.0",
-    "eslint": "1.3.1",
-    "eslint-loader": "1.0.0",
-    "eslint-plugin-react": "3.3.1",
+    "eslint": "1.6.0",
+    "eslint-loader": "1.1.0",
+    "eslint-plugin-react": "3.5.1",
     "extract-text-webpack-plugin": "0.8.2",
     "file-loader": "0.8.4",
     "jest": "0.1.40",
@@ -32,11 +32,12 @@
     "moment": "2.9.0",
     "moment-range": "1.0.5",
     "react-hot-loader": "1.3.0",
+    "sass-loader": "3.0.0",
     "style-loader": "0.12.3",
     "url-loader": "0.5.6",
-    "webpack": "1.11.0",
+    "webpack": "1.12.2",
     "webpack-babel-jest": "1.0.0",
-    "webpack-dev-server": "1.10.1"
+    "webpack-dev-server": "1.12.0"
   },
   "engines": {
     "node": ">= 0.10.x",
