--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "classnames": "1.2.1",
     "react": "0.13.3",
-    "react-tools": "0.13.3"
+    "react-tools": "0.13.3",
+    "underscore": "1.8.3"
   },
   "devDependencies": {
     "babel": "5.8.23",
