ID-2650 ID-2649 -- add dummy pom.xml to enable the mvn executable on the build machine (take 4)
Change-Id: I2287c610e760f42e1d6f4e9a411c21809c5eb4f7

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -106,8 +106,9 @@ deploy: log-config clean-build
 		-DartifactId=ui-library \
 		-Dversion=$(GIT_VERSION) \
 		-Dfile=build/ui-library-$(GIT_VERSION).tar.gz \
+		-DuniqueVersion=false \
 		-DrepositoryId=art01 \
-		-Durl=http://art01.corp.pingidentity.com:8080/artifactory/repo
+		-Durl=http://art01.corp.pingidentity.com:8081/artifactory/inhouse
 
 # set the version number to FINAL, commit and push the change
 # package the module and name the file to include the FINAL version
