ID-2650 ID-2649 -- add dummy pom.xml to enable the mvn executable on the build machine (take 7)
Change-Id: I3449d9da6175b6a7518eaf5011334a6834de404f

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -99,8 +99,10 @@ verify: install-node-npm
 # package the module and name the file to include the current version
 # deploy the package as a maven artifact
 deploy: log-config clean-build
-	mkdir -p build
-	tar -czf build/ui-library-$(GIT_VERSION).tar.gz --directory=.. ui-library/src ui-library/package.json
+	mkdir -p build/ui-library
+	cp -rf src build/ui-library
+	cp -f package.json build/ui-library
+	tar -czf build/ui-library-$(GIT_VERSION).tar.gz --directory=build ui-library
 	$(MVN) deploy:deploy-file \
 		-DgroupId=com.pingone.ui-library \
 		-DartifactId=ui-library \
@@ -125,7 +127,7 @@ dist: log-config clean-build
 	git commit -a -m "Release the project"
 	git push origin $(GIT_BRANCH):$(GIT_BRANCH)
 	mkdir build
-	tar -czf build/ui-library-$(GIT_VERSION_FINAL).tar.gz --directory=.. ui-library/src ui-library/package.json
+	tar -czf build/ui-library-$(GIT_VERSION_FINAL).tar.gz --directory=build ui-library
 	$(MVN) deploy:deploy-file \
 		-DgroupId=com.pingone.ui-library \
 		-DartifactId=ui-library \
@@ -139,7 +141,7 @@ dist: log-config clean-build
 	mv package.json.tmp package.json
 	git commit -a -m "Prepare for the next release cycle"
 	git push origin $(GIT_BRANCH):$(GIT_BRANCH)
-	tar -czf build/ui-library-$(GIT_VERSION_NEXT).tar.gz --directory=.. ui-library/src ui-library/package.json
+	tar -czf build/ui-library-$(GIT_VERSION_NEXT).tar.gz --directory=build ui-library
 	$(MVN) deploy:deploy-file \
 		-DgroupId=com.pingone.ui-library \
 		-DartifactId=ui-library \
