ID-2786 ID-2800: Added the InfiniteScroll to the ui-library and refactored the demo page to make it easier to add demos.
Change-Id: I99570b85baf061bca139af1ed5034ca6f5e4ae71

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "classnames": "1.2.1",
+    "isomorphic-fetch": "2.1.1",
     "react": "0.13.3",
     "react-tools": "0.13.3",
+    "redux": "3.0.2",
     "underscore": "1.8.3"
   },
   "devDependencies": {
