ID-2786 ID-2822 Multiselect component and demo are added
Change-Id: I8487509f2b1255d2515817923a78c44e87dec596

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -15,7 +15,8 @@
     "react": "0.13.3",
     "react-tools": "0.13.3",
     "redux": "3.0.2",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "underscore.string": "3.2.2"
   },
   "devDependencies": {
     "babel": "5.8.23",
