--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "classnames": "1.2.1",
     "isomorphic-fetch": "2.1.1",
+    "object-assign": "4.0.1",
     "react": "0.13.3",
     "react-tools": "0.13.3",
     "redux": "3.0.2",
@@ -77,6 +78,8 @@
     "verify": "npm run lint && npm run test"
   },
   "browserify": {
-    "transform": ["reactify"]
+    "transform": [
+      "reactify"
+    ]
   }
 }
