--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -17,7 +17,8 @@
     "react-tools": "0.13.3",
     "redux": "3.0.2",
     "underscore": "1.8.3",
-    "underscore.string": "3.2.2"
+    "underscore.string": "3.2.2",
+    "superagent": "0.21.0"
   },
   "devDependencies": {
     "babel": "5.8.23",
