--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -56,11 +56,7 @@
     "rootDir": "./",
     "scriptPreprocessor": "<rootDir>/preprocessor.js",
     "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react",
-      "<rootDir>/node_modules/react-tools",
-      "<rootDir>/node_modules/classnames",
-      "<rootDir>/node_modules/underscore",
-      "<rootDir>/src/core/TestUtils"
+      "<rootDir>/node_modules"
     ],
     "testDirectoryName": "tests",
     "testFileExtensions": [
@@ -69,7 +65,8 @@
     ],
     "testPathIgnorePatterns": [
       "<rootDir>/node/",
-      "<rootDir>/node_modules/"
+      "<rootDir>/node_modules/",
+      "<rootDir>/.*/tests/coverage/"
     ]
   },
   "scripts": {
