ID-3156 -- clean up the jest preprocess cache after running tests
Change-Id: I11ea2c4cf34981cb9889d389677d972cbc9d82b5

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -95,6 +95,7 @@ verify: install-node-npm
 	# meaning I have to execute the npm scripts one at a time
 	$(NPM_EXEC) run lint
 	$(NPM_EXEC) run test
+	rm -rf $$TMPDIR/jest_preprocess_cache
 
 # package the module and name the file to include the current version
 # deploy the package as a maven artifact
