--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "classnames": "1.2.1",
+    "fbjs": "0.4.0",
     "isomorphic-fetch": "2.1.1",
     "object-assign": "4.0.1",
     "react": "0.13.3",
     "react-tools": "0.13.3",
     "redux": "3.0.2",
+    "superagent": "0.21.0",
     "underscore": "1.8.3",
-    "underscore.string": "3.2.2",
-    "superagent": "0.21.0"
+    "underscore.string": "3.2.2"
   },
   "devDependencies": {
     "babel": "5.8.23",
