ID-3208 ID-3243 -- fix the release build
Change-Id: Iafa4600c0f50bb3c3baecccaab20d3d242303293

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -142,10 +142,10 @@ deploy: install-mvn
 # deploy the package as a maven artifact
 # no verification is done here, meaning node/npm are not needed
 dist: install-mvn
-	$(call version_and_tag,$(GIT_VERSION_FINAL,"Release the project"))
+	$(call version_and_tag,$(GIT_VERSION_FINAL),"Release the project")
 	$(call package,$(GIT_VERSION_FINAL))
 	$(call deploy,$(GIT_VERSION_FINAL))
-	$(call version_and_tag,$(GIT_VERSION_NEXT,"Prepare for the next release cycle"))
+	$(call version_and_tag,$(GIT_VERSION_NEXT),"Prepare for the next release cycle")
 	$(call package,$(GIT_VERSION_NEXT))
 	$(call deploy,$(GIT_VERSION_NEXT))
 
