--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -63,7 +63,7 @@ GIT_VERSION_NEXT=$(GIT_VERSION_MAJOR).$(GIT_VERSION_MINOR_NEXT).$(GIT_VERSION_PA
 define version_and_tag
 	sed -e 's/"version"[[:space:]]*:[[:space:]]*"[^"]*"/"version": "$(1)"/' package.json > package.json.tmp
 	mv package.json.tmp package.json
-	git commit -a -m "$(2)"
+	git commit -a -m $(2)
 	git push origin $(GIT_BRANCH):$(GIT_BRANCH)
 
 endef
