ID-3208 ID-3243 -- fix the release build (take 8)
Change-Id: Iee2610d0f3bae31785fc26eaed5e16c74427967f

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -30,7 +30,7 @@ M2_HOME := $(CURRENT_DIR)/mvn
 SHELL := /bin/bash
 PATH := $(CURRENT_DIR)/node:$(CURRENT_DIR)/node/npm/bin:$(PATH):$(M2_HOME)/bin
 
-GIT_BRANCH := $(shell git rev-parse --abbrev-ref HEAD)
+GIT_BRANCH := $(shell git branch | sed -n '/\* /s///p')
 
 
 # extract the version number from package.json
@@ -141,5 +141,6 @@ deploy: install-mvn
 # package the module and name the file to include the current version
 # deploy the package as a maven artifact
 # no verification is done here, meaning node/npm are not needed
-dist: install-mvn
+dist:
 	@echo $(GIT_BRANCH)
+
